# bwoc-agent-installer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
notes/: 2026-06-09_v1.0.0-from-scratch.md
scripts/: install.ps1  install.sh
src/: app.rs  catalog.rs  exec.rs  i18n.rs  main.rs  theme.rs  ui.rs
